--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,14 @@
   background-color: lightgrey;
 }
 .container2 {
+  border: 3px solid black;
 }
 .main {
+  width: 500px;
   background-color: white;
   overflow-y: scroll;
   height: 600px;
+  padding: 20px;
 }
 
 button {
